# cargo-reclaim

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release-prepare.yml  release.yml  test.yml
examples/: reclaim.toml
src/: classifier.rs  cli.rs  config.rs  disk.rs  error.rs  integration.rs  lib.rs  main.rs  model.rs  plan_edit.rs  policy.rs  toolchain_hash.rs
src/active_process/: common.rs  foundation.rs  kill.rs  mod.rs  platform.rs  procfs.rs  sysinfo_provider.rs
src/background/: mod.rs  run_log.rs  runner.rs  service.rs
src/cargo_home/: apply.rs  classify.rs  inventory.rs  measure.rs  mod.rs  model.rs  persistence.rs  plan.rs  report.rs  resolve.rs
src/cli/: apply.rs  cargo_home.rs  cleanup.rs  cleanup_assistant.rs  cleanup_terminal.rs  edit_plan.rs  error_output.rs  list.rs  output.rs  persistence.rs  (+4 more)
tests/: active_process_procfs.rs  background_run_log.rs  background_runner.rs  background_service.rs  cargo_home_apply.rs  cargo_home_persistence.rs  cargo_home_plan.rs  cargo_home_report.rs  classifier_foundation.rs  cli_cargo_config.rs  cli_cargo_home.rs  cli_cleanup.rs  cli_help.rs  cli_list.rs  cli_plan.rs  cli_plan_edit.rs  cli_scheduler.rs  cli_scheduler_service.rs  cli_targets.rs  config_examples.rs  executor_apply.rs  integration_plan.rs  inventory_foundation.rs  model_policy.rs  plan_persistence.rs  planner_active.rs  planner_foundation.rs  scanner_cargo_config.rs  scanner_foundation.rs  scanner_recursive.rs  scheduler_executor.rs  scheduler_generation.rs  stale_deps_plan.rs  watcher_thresholds.rs
(+68 files in other folders)
