[package]
name = "cargo-reclaim"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
description = "Safe Cargo cleanup for target directories, stale artifacts, and Cargo home caches"
readme = "README.md"
documentation = "https://docs.rs/cargo-reclaim"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "cleanup", "artifacts", "cli", "cache"]
categories = ["command-line-utilities", "filesystem", "development-tools"]

[lib]
name = "cargo_reclaim"
path = "src/lib.rs"

[[bin]]
name = "cargo-reclaim"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
fs2 = "0.4"
rayon = "1.12"
sysinfo = { version = "0.37.2", default-features = false, features = ["system"] }
toml = "0.9"
toml_edit = "0.25"
rustc-stable-hash = "0.1.2"
crossterm = "0.29"
